IT CRAFTS!! (sometimes)